--- a/estilo/style.css
+++ b/estilo/style.css
@@ -78,6 +78,9 @@ nav > a:hover{
     background-color: var(--cor3);
     color: var(--cor5);
 }
+nav > a:active{
+    background-color: white;
+}
 main{
     margin: auto;
     max-width: 830px;
@@ -135,8 +138,8 @@ main a:hover{
     text-decoration: underline;
     color: var(--cor3);
 }
-a.externo::after{
-    content: '\00a0\1f517';
+a.externo::before{
+    content: '\1f517\00a0';
 }
 
 div.video{
@@ -174,6 +177,12 @@ aside h3{
     margin: -10px -10px 0px -10px;
     padding: 10px;
     border-radius: 10px 10px 0px 0px;
+}
+main a:active{
+    color: var(--cor5);
+}
+aside ul a:active{
+    font-size: 14px;
 }
 footer{
     background-color: var(--cor5);
